# microservice-template

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: cargo_test.yml  docker_deploy.yml
src/: lib.rs  main.rs
src/endpoints/: mod.rs  ping.rs
src/util/: mod.rs
tests/: hello_test.rs  ping_test.rs
