[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version = "4", features = ["macros"]}
serde_json = "1.0.132"
serde = {version="1.0.214", features = ["derive"]}
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"

[lib]
name = "service"
path = "src/main.rs"
